# Lambdas

./: CMakeLists.txt  main.cpp
core/normalizer/: normalizer.cpp  normalizer.h
core/objects/: lambda_expression.h  lambda_term.cpp  lambda_term.h
